--- a/Resources/Prototypes/Entities/Mobs/NPCs/simplemob.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/simplemob.yml
@@ -182,3 +182,6 @@
     heatDamage:
       types:
         Heat : 1 #per second, scales with temperature & other constants
+
+  - type: Bloodstream
+    bloodMaxVolume: 150
