Nerf observer speed (#6674)

--- a/Resources/Prototypes/Entities/Mobs/Player/admin_ghost.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/admin_ghost.yml
@@ -14,6 +14,9 @@
   - type: CombatMode
   - type: Actions
   - type: PlayerInputMover
+  - type: MovementSpeedModifier
+    baseSprintSpeed: 12
+    baseWalkSpeed: 8
   - type: Physics
     bodyType: Kinematic
     status: InAir
