Added text for petting Holoparasites (#6728)
Co-authored-by: metalgearsloth <comedian_vs_clown@hotmail.com>

--- a/Resources/Prototypes/Entities/Mobs/Player/guardian.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/guardian.yml
@@ -69,5 +69,9 @@
         Blunt: 22
   - type: Actions
   - type: Guardian
+  - type: InteractionPopup
+    interactSuccessString: petting-success-holo
+    interactFailureString: petting-failure-holo
+    successChance: 0.7
   - type: NameIdentifier
     group: Holoparasite
