Fix some collision flag issues (#6942)
Co-authored-by: Electro <no>

--- a/Resources/Prototypes/Entities/Structures/Furniture/potted_plants.yml
+++ b/Resources/Prototypes/Entities/Structures/Furniture/potted_plants.yml
@@ -15,7 +15,8 @@
         radius: 0.2
       mass: 25
       mask:
-        - MobImpassable
+        - SmallImpassable
+        - VaultImpassable
       layer:
         - Opaque
         - MobImpassable
