--- a/Resources/Prototypes/Entities/Structures/Furniture/Tables/base_structuretables.yml
+++ b/Resources/Prototypes/Entities/Structures/Furniture/Tables/base_structuretables.yml
@@ -19,6 +19,7 @@
       - VaultImpassable
       mask:
       - Impassable
+      - VaultImpassable # tables should collide with other tables
       - SmallImpassable
   - type: Sprite
     netsync: false
