--- a/Resources/Prototypes/Entities/Structures/Power/Generation/Singularity/generator.yml
+++ b/Resources/Prototypes/Entities/Structures/Power/Generation/Singularity/generator.yml
@@ -25,7 +25,7 @@
       layer:
       - Opaque
       mask:
-      - MobImpassable
+      - MobMask
   - type: Transform
     anchored: true
   - type: Anchorable
