--- a/Resources/Prototypes/Entities/Structures/Doors/Airlocks/assembly.yml
+++ b/Resources/Prototypes/Entities/Structures/Doors/Airlocks/assembly.yml
@@ -17,7 +17,7 @@
           bounds: "-0.49,-0.49,0.49,0.49"
       mass: 100
       mask:
-      - MobImpassable
+      - MobMask
       layer:
       - MobImpassable
       - VaultImpassable
