--- a/Resources/Prototypes/Entities/Structures/Machines/Computers/frame.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/Computers/frame.yml
@@ -13,7 +13,7 @@
           bounds: "-0.25,-0.5,0.25,0.5"
       mass: 25
       mask:
-        - MobImpassable
+        - MobMask
       layer:
         - Opaque
         - MobImpassable
