Jumpsuit butchering and gauze crafting (#6787)
Co-authored-by: metalgearsloth <31366439+metalgearsloth@users.noreply.github.com>

--- a/Resources/Prototypes/Entities/Clothing/Neck/base_clothingneck.yml
+++ b/Resources/Prototypes/Entities/Clothing/Neck/base_clothingneck.yml
@@ -10,3 +10,7 @@
     - neck
   - type: Sprite
     state: icon
+  - type: Butcherable
+    butcheringType: Knife
+    spawned: MaterialCloth1
+    pieces: 2
