--- a/Resources/Prototypes/Entities/Clothing/Shoes/base_clothingshoes.yml
+++ b/Resources/Prototypes/Entities/Clothing/Shoes/base_clothingshoes.yml
@@ -8,8 +8,7 @@
     - FEET
   - type: Sprite
     state: icon
-  - type: Extractable
-    juiceSolution:
-      reagents:
-      - ReagentId: Fiber
-        Quantity: 5
+  - type: Butcherable
+    butcheringType: Knife
+    spawned: MaterialCloth1
+    pieces: 1
