Check mass on climb glass table (#6959)
Co-authored-by: metalgearsloth <31366439+metalgearsloth@users.noreply.github.com>

--- a/Resources/Prototypes/Entities/Structures/Furniture/Tables/tables.yml
+++ b/Resources/Prototypes/Entities/Structures/Furniture/Tables/tables.yml
@@ -136,6 +136,7 @@
     tableDamage:
       types:
         Blunt: 25
+    tableMassLimit: 60
   - type: Destructible
     thresholds:
     - trigger:
@@ -175,6 +176,7 @@
     tableDamage:
       types:
         Blunt: 40
+    tableMassLimit: 120
   - type: Destructible
     thresholds:
     - trigger:
@@ -223,6 +225,7 @@
     tableDamage:
       types:
         Blunt: 100
+    tableMassLimit: 240
   - type: Destructible
     thresholds:
     - trigger:
