--- a/Resources/Prototypes/Entities/Objects/Fun/toys.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/toys.yml
@@ -51,7 +51,7 @@
         reagents:
         - ReagentId: Fiber
           Quantity: 10
-    
+
 - type: entity
   parent: BasePlushie
   id: PlushieGhost
@@ -398,6 +398,7 @@
     state: blue
   - type: Item
     heldPrefix: blue
+    storedRotation: -90
   - type: Tag
     tags:
       - PlushieSharkBlue
@@ -467,6 +468,7 @@
     state: carpplush
   - type: Item
     heldPrefix: carpplush
+    storedRotation: -90
   - type: EmitSoundOnUse
     sound:
       path: /Audio/Effects/bite.ogg
@@ -679,7 +681,7 @@
   - type: EmitSoundOnTrigger
     sound:
       path: /Audio/Voice/Human/malescream_5.ogg
-  
+
 - type: entity
   parent: BasePlushie
   id: PlushieMoth
