--- a/Resources/Prototypes/Entities/Structures/Piping/Atmospherics/special.yml
+++ b/Resources/Prototypes/Entities/Structures/Piping/Atmospherics/special.yml
@@ -30,73 +30,65 @@
     node: tinyfan
 
 - type: entity
+  id: FanPartBase
+  abstract: true
+  placement:
+    mode: SnapgridCenter
+  components:
+  - type: Transform
+    anchored: true
+  - type: Physics
+    bodyType: Static
+  - type: Sprite
+    state: icon
+  - type: Clickable
+  - type: Construction
+    graph: AtmosDeviceFanTiny
+
+- type: entity
+  parent: FanPartBase
   id: AtmosDeviceFanTinyP1
   name: каркас маленького вентилятора
   placement:
     mode: SnapgridCenter
   components:
-  - type: Transform
-    anchored: true
-  - type: Physics
-    bodyType: Static
   - type: Sprite
     sprite: Structures/Piping/Atmospherics/tinyfanparts/p1.rsi
-    state: icon
-  - type: Clickable
   - type: Construction
-    graph: AtmosDeviceFanTiny
     node: tinyfanp1
 
 - type: entity
+  parent: FanPartBase
   id: AtmosDeviceFanTinyP2
   name: каркас маленького вентилятора
   placement:
     mode: SnapgridCenter
   components:
-  - type: Transform
-    anchored: true
-  - type: Physics
-    bodyType: Static
   - type: Sprite
-    sprite: Structures/Piping/Atmospherics/tinyfanparts/p1.rsi
-    state: icon
-  - type: Clickable
+    sprite: Structures/Piping/Atmospherics/tinyfanparts/p2.rsi
   - type: Construction
-    graph: AtmosDeviceFanTiny
     node: tinyfanp2
 
 - type: entity
+  parent: FanPartBase
   id: AtmosDeviceFanTinyP3
   name: каркас маленького вентилятора
   placement:
     mode: SnapgridCenter
   components:
-  - type: Transform
-    anchored: true
-  - type: Physics
-    bodyType: Static
   - type: Sprite
-    sprite: Structures/Piping/Atmospherics/tinyfanparts/p2.rsi
-    state: icon
-  - type: Clickable
+    sprite: Structures/Piping/Atmospherics/tinyfanparts/p3.rsi
   - type: Construction
-    graph: AtmosDeviceFanTiny
     node: tinyfanp3
 
 - type: entity
+  parent: FanPartBase
   id: AtmosDeviceFanTinyP4
   name: каркас маленького вентилятора
   placement:
     mode: SnapgridCenter
   components:
-  - type: Transform
-    anchored: true
-  - type: Physics
-    bodyType: Static
   - type: Sprite
-    sprite: Structures/Piping/Atmospherics/tinyfanparts/p3.rsi
-    state: icon
-  - type: Clickable
+    sprite: Structures/Piping/Atmospherics/tinyfanparts/p4.rsi
   - type: Construction
-    graph: AtmosDeviceFanTiny
     node: tinyfanp4
