fix printer description
Signed-off-by: c4llv07e <kseandi@gmail.com>

--- a/Resources/Prototypes/Adventure/Entities/Objects/printer.yml
+++ b/Resources/Prototypes/Adventure/Entities/Objects/printer.yml
@@ -160,7 +160,7 @@
   parent: BaseFlatpack
   id: PrinterFlatpack
   name: упакованный принтер
-  description: упакованн
+  description: Упаковка, при помощи которой можно создать принтер.
   components:
   - type: Flatpack
     entity: Printer
