--- a/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/backpack.yml
+++ b/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/backpack.yml
@@ -6,6 +6,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvival
+      - id: IndiMedBox
 
 - type: entity
   noSpawn: true
@@ -15,6 +16,7 @@
   - type: StorageFill
     contents:
       - id: BoxHug
+      - id: IndiMedBox
       - id: RubberStampClown
       - id: CrayonRainbow
 
@@ -26,6 +28,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvivalSecurity
+      - id: IndiMedBox
       - id: Flash
       - id: MagazinePistol
 
@@ -37,6 +40,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvival
+      - id: IndiMedBox
       - id: ForensicPad
       - id: ForensicScanner
 
@@ -48,6 +52,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvivalMedical
+      - id: IndiMedBox
 
 - type: entity
   noSpawn: true
@@ -57,6 +62,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvivalMedical
+      - id: IndiMedBox
       - id: EmergencyRollerBedSpawnFolded
 
 - type: entity
@@ -67,6 +73,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvival
+      - id: IndiMedBox
       - id: Flash
       #- name: StationCharter
       #- name: TelescopicBaton
@@ -79,6 +86,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvivalEngineering
+      - id: IndiMedBox
       - id: Flash
       #- id: TelescopicBaton
 
@@ -90,6 +98,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvival
+      - id: IndiMedBox
       - id: Flash
       #- id: TelescopicBaton
 
@@ -101,6 +110,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvival
+      - id: IndiMedBox
       - id: Flash
       #- id: TelescopicBaton
 
@@ -112,6 +122,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvivalMedical
+      - id: IndiMedBox
       - id: Flash
       #- id: TelescopicBaton
 
@@ -123,6 +134,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvival
+      - id: IndiMedBox
       - id: Flash
       #- id: TelescopicBaton
 
@@ -134,6 +146,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvivalSecurity
+      - id: IndiMedBox
       - id: Flash
       - id: MagazinePistol
 
@@ -145,6 +158,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvivalEngineering
+      - id: IndiMedBox
 
 - type: entity
   noSpawn: true
@@ -154,6 +168,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvivalEngineering
+      - id: IndiMedBox
 
 - type: entity
   noSpawn: true
@@ -163,6 +178,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvival
+      - id: IndiMedBox
 
 - type: entity
   noSpawn: true
@@ -172,6 +188,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvival
+      - id: IndiMedBox
 
 - type: entity
   noSpawn: true
@@ -181,6 +198,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvival
+      - id: IndiMedBox
       - id: RubberStampMime
 
 - type: entity
@@ -191,6 +209,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvivalMedical
+      - id: IndiMedBox
 
 - type: entity
   noSpawn: true
@@ -200,6 +219,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvival
+      - id: IndiMedBox
       - id: Bible
       - id: RubberStampChaplain
 
@@ -211,6 +231,7 @@
     - type: StorageFill
       contents:
         - id: BoxSurvival
+        - id: IndiMedBox
         - id: AcousticGuitarInstrument
         - id: SaxophoneInstrument
 
@@ -222,6 +243,7 @@
     - type: StorageFill
       contents:
         - id: BoxSurvival
+        - id: IndiMedBox
         - id: BookRandom
 
 - type: entity
@@ -232,6 +254,7 @@
     - type: StorageFill
       contents:
       - id: BoxSurvival
+      - id: IndiMedBox
       - id: Lighter
       - id: CigPackBlack
       - id: HandLabeler
@@ -247,6 +270,7 @@
     - type: StorageFill
       contents:
         - id: BoxSurvivalEngineering
+        - id: IndiMedBox
         - id: WeaponDisabler
         - id: MedicatedSuture
         - id: RegenerativeMesh
@@ -262,6 +286,7 @@
     - type: StorageFill
       contents:
         - id: BoxSurvivalEngineering
+        - id: IndiMedBox
         - id: WeaponDisabler
         - id: MedicatedSuture
         - id: RegenerativeMesh
@@ -277,6 +302,7 @@
     - type: StorageFill
       contents:
         - id: BoxSurvivalMedical
+        - id: IndiMedBox
         - id: Hypospray
         - id: MedkitAdvancedFilled
         - id: CrowbarRed
@@ -292,6 +318,7 @@
     - type: StorageFill
       contents:
         - id: BoxSurvivalEngineering
+        - id: IndiMedBox
         - id: trayScanner
         - id: RCD
         - id: RCDAmmo
@@ -311,6 +338,7 @@
     - type: StorageFill
       contents:
         - id: BoxSurvivalEngineering
+        - id: IndiMedBox
         - id: LightReplacer
         - id: BoxLightMixed
         - id: BoxLightMixed
@@ -333,6 +361,7 @@
     - type: StorageFill
       contents:
         - id: BoxSurvivalEngineering
+        - id: IndiMedBox
         - id: WeaponPulseRifle
         - id: WeaponPulsePistol
         - id: WeaponRevolverMateba
@@ -354,6 +383,7 @@
   - type: StorageFill
     contents:
     - id: BoxHug
+    - id: IndiMedBox
     - id: WeaponPulsePistol
     - id: MedkitFilled
     - id: Soap
@@ -370,6 +400,7 @@
     - type: StorageFill
       contents:
         - id: BoxSurvival
+        - id: IndiMedBox
 
 - type: entity
   noSpawn: true
@@ -379,6 +410,7 @@
     - type: StorageFill
       contents:
         - id: BoxSurvival
+        - id: IndiMedBox
 
 # Pirate
 
@@ -390,6 +422,7 @@
     - type: StorageFill
       contents:
         - id: BoxSurvival
+        - id: IndiMedBox
         - id: Cutlass
         - id: WeaponRevolverPirate
         - id: ClothingEyesEyepatch
