--- a/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/duffelbag.yml
+++ b/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/duffelbag.yml
@@ -6,6 +6,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvival
+      - id: IndiMedBox
 
 - type: entity
   noSpawn: true
@@ -15,6 +16,7 @@
   - type: StorageFill
     contents:
       - id: BoxHug
+      - id: IndiMedBox
       - id: RubberStampClown
 
 - type: entity
@@ -25,6 +27,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvivalSecurity
+      - id: IndiMedBox
       - id: Flash
       - id: MagazinePistol
 
@@ -36,6 +39,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvival
+      - id: IndiMedBox
       - id: ForensicPad
       - id: ForensicScanner
 
@@ -47,6 +51,7 @@
   - type: StorageFill
     contents:
       - id: Flash
+      - id: IndiMedBox
 
 - type: entity
   noSpawn: true
@@ -56,6 +61,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvivalMedical
+      - id: IndiMedBox
 
 - type: entity
   noSpawn: true
@@ -65,6 +71,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvivalMedical
+      - id: IndiMedBox
       - id: EmergencyRollerBedSpawnFolded
 
 - type: entity
@@ -75,6 +82,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvival
+      - id: IndiMedBox
       - id: Flash
       #- name: StationCharter
       #- name: TelescopicBaton
@@ -87,6 +95,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvivalEngineering
+      - id: IndiMedBox
       - id: Flash
       #- id: TelescopicBaton
 
@@ -98,6 +107,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvival
+      - id: IndiMedBox
       - id: Flash
       #- id: TelescopicBaton
 
@@ -109,6 +119,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvival
+      - id: IndiMedBox
       - id: Flash
       #- id: TelescopicBaton
 
@@ -120,6 +131,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvivalMedical
+      - id: IndiMedBox
       - id: Flash
       #- id: TelescopicBaton
 
@@ -131,6 +143,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvival
+      - id: IndiMedBox
       - id: Flash
       #- id: TelescopicBaton
 
@@ -142,6 +155,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvivalSecurity
+      - id: IndiMedBox
       - id: Flash
       - id: MagazinePistol
 
@@ -153,6 +167,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvivalEngineering
+      - id: IndiMedBox
 
 - type: entity
   noSpawn: true
@@ -162,6 +177,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvivalEngineering
+      - id: IndiMedBox
 
 
 - type: entity
@@ -172,6 +188,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvival
+      - id: IndiMedBox
 
 - type: entity
   noSpawn: true
@@ -181,6 +198,7 @@
     - type: StorageFill
       contents:
         - id: BoxSurvival
+        - id: IndiMedBox
 
 - type: entity
   noSpawn: true
@@ -190,6 +208,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvival
+      - id: IndiMedBox
       - id: RubberStampMime
 
 - type: entity
@@ -200,6 +219,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvivalMedical
+      - id: IndiMedBox
 
 - type: entity
   noSpawn: true
@@ -209,6 +229,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvival
+      - id: IndiMedBox
       - id: Bible
       - id: RubberStampChaplain
 
@@ -220,6 +241,7 @@
     - type: StorageFill
       contents:
         - id: BoxSurvival
+        - id: IndiMedBox
         - id: AcousticGuitarInstrument
         - id: SaxophoneInstrument
 
@@ -231,6 +253,7 @@
     - type: StorageFill
       contents:
         - id: BoxSurvival
+        - id: IndiMedBox
         - id: BookRandom
 
 - type: entity
@@ -241,6 +264,7 @@
     - type: StorageFill
       contents:
       - id: BoxSurvival
+      - id: IndiMedBox
       - id: Lighter
       - id: CigPackBlack
       - id: BoxForensicPad
@@ -254,6 +278,7 @@
     - type: StorageFill
       contents:
         - id: BoxSurvival
+        - id: IndiMedBox
 
 - type: entity
   noSpawn: true
@@ -263,3 +288,4 @@
     - type: StorageFill
       contents:
         - id: BoxSurvival
+        - id: IndiMedBox
