--- a/Resources/Prototypes/Corvax/Catalog/Fills/Backpacks/StarterGear/duffelbag.yml
+++ b/Resources/Prototypes/Corvax/Catalog/Fills/Backpacks/StarterGear/duffelbag.yml
@@ -6,6 +6,7 @@
     - type: StorageFill
       contents:
         - id: BoxSurvival
+        - id: IndiMedBox
 
 - type: entity
   noSpawn: true
@@ -15,4 +16,5 @@
     - type: StorageFill
       contents:
         - id: BoxSurvivalMedical
+        - id: IndiMedBox
         - id: RubberStampPsychologist
