индивидуальные аптечки fix
Signed-off-by: Semka_39 <semendruzinin502@gmail.com>

--- a/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/satchel.yml
+++ b/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/satchel.yml
@@ -297,7 +297,7 @@
   components:
   - type: StorageFill
     contents:
-    - id: AdminPD
+    - id: AdminPDA
     - id: GasAnalyzer
     - id: trayScanner
     - id: DoorRemoteAll
