Cleans up base crates for mapping clarity (#25618)
* Cleans up base crates for mapping clarity

* migration

---------

Co-authored-by: Jeff <velcroboy333@hotmail.com>

--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -223,3 +223,6 @@ SolarAssemblyPart: SolarAssemblyFlatpack
 AmePart: AmePartFlatpack
 AmePartStealObjective: AmePartFlatpackStealObjective
 Observationskit: null
+
+# 2024-02-26
+CrateBaseWeldable: CrateGenericSteel
