голубые голограмы охраны
Signed-off-by: Semka_39 <semendruzinin502@gmail.com>

--- a/Resources/Prototypes/Entities/Structures/Holographic/projections.yml
+++ b/Resources/Prototypes/Entities/Structures/Holographic/projections.yml
@@ -73,7 +73,7 @@
     - type: PointLight
       enabled: true
       radius: 3
-      color: red
+      color: blue
     - type: Climbable
     - type: Clickable
 
