--- a/Resources/Prototypes/Catalog/Fills/Boxes/medical.yml
+++ b/Resources/Prototypes/Catalog/Fills/Boxes/medical.yml
@@ -147,10 +147,20 @@
 
 - type: entity
   name: индивидуальная аптечка
-  parent: BoxCardboard
+  parent: BaseStorageItem
   id: IndiMedBox
   description: Аптечка для самолечения небольших травм.
   components:
+  - type: Sprite
+    sprite: Objects/Storage/indimedbox.rsi
+    layers:
+      - map: [ base ]
+        state: close
+  - type: Storage
+    grid:
+    - 0,0,2,2
+  - type: Item
+    size: Normal
   - type: StorageFill
     contents:
       - id: NamedPillDexalin
@@ -161,6 +171,10 @@
       - id: Gauze
       - id: Ointment1
         amount: 2
-  - type: Sprite
-    layers:
-      - state: box_indimedical
+  - type: GenericVisualizer
+    visuals:
+      enum.StorageVisuals.Open:
+        base:
+          True: { state: open }
+          False: { state: close }
+  - type: Appearance
