--- a/Resources/Prototypes/Recipes/Construction/Graphs/utilities/atmos_other.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/utilities/atmos_other.yml
@@ -58,6 +58,13 @@
       edges:
         - to: tinyfan
           steps:
+            - component: CapacitorStockPart
+              store: StockPart
+              name: "door electronics circuit board"
+              icon:
+                sprite: "Objects/Misc/module.rsi"
+                state: "door_electronics"
+              doAfter: 3
             - material: Plasma
               amount: 5
               doAfter: 1
