--- a/Resources/Prototypes/Corvax/Catalog/Fills/Backpacks/StarterGear/satchel.yml
+++ b/Resources/Prototypes/Corvax/Catalog/Fills/Backpacks/StarterGear/satchel.yml
@@ -6,6 +6,7 @@
     - type: StorageFill
       contents:
         - id: BoxSurvival
+        - id: IndiMedBox
 
 - type: entity
   noSpawn: true
@@ -16,3 +17,4 @@
       contents:
         - id: BoxSurvivalMedical
         - id: RubberStampPsychologist
+        - id: IndiMedBox
