--- a/Resources/Prototypes/Entities/Structures/Holographic/projections.yml
+++ b/Resources/Prototypes/Entities/Structures/Holographic/projections.yml
@@ -73,7 +73,7 @@
     - type: PointLight
       enabled: true
       radius: 3
-      color: blue
+      color: red
     - type: Climbable
     - type: Clickable
 
