i don't know what i am doing
Signed-off-by: c4llv07e <kseandi@gmail.com>

--- a/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/satchel.yml
+++ b/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/satchel.yml
@@ -223,7 +223,7 @@
     - type: StorageFill
       contents:
         - id: BoxSurvival
- 
+
         - id: AcousticGuitarInstrument
         - id: SaxophoneInstrument
 
@@ -235,7 +235,7 @@
     - type: StorageFill
       contents:
         - id: BoxSurvival
- 
+
         - id: BookRandom
 
 - type: entity
@@ -259,7 +259,7 @@
     - type: StorageFill
       contents:
         - id: BoxSurvival
- 
+
 
 - type: entity
   noSpawn: true
@@ -269,7 +269,7 @@
     - type: StorageFill
       contents:
         - id: BoxSurvival
- 
+
 
 - type: entity
   noSpawn: true
@@ -288,6 +288,7 @@
   components:
   - type: StorageFill
     contents:
+    - id: AdminPDA
     - id: GasAnalyzer
     - id: trayScanner
     - id: DoorRemoteAll
