--- a/Resources/Prototypes/Entities/Objects/Devices/Circuitboards/computer.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/Circuitboards/computer.yml
@@ -83,6 +83,9 @@
       prototype: ComputerCargoOrders
     - type: StaticPrice
       price: 0
+    - type: Tag
+      tags:
+      - DroneUsable
 
 - type: entity
   id: CargoBountyComputerCircuitboard
