Revert "vulps for everyone!!1!"
This reverts commit 6ce5c00e4da52870ed0c5814f3a86fcc779f3abf.

--- a/Resources/Prototypes/Corvax/Species/vulpkanin.yml
+++ b/Resources/Prototypes/Corvax/Species/vulpkanin.yml
@@ -1,8 +1,8 @@
 - type: species
   id: Vulpkanin
   name: species-name-vulpkanin
-  roundStart: true
-  sponsorOnly: false
+  roundStart: false
+  sponsorOnly: true # Corvax-Sponsors
   prototype: MobVulpkanin
   sprites: MobVulpkaninSprites
   defaultSkinTone: "#eb943d"
