CryoSleep Access Fix (#25752)
Cryo Access Fix

--- a/Resources/Prototypes/Roles/Jobs/Security/security_cadet.yml
+++ b/Resources/Prototypes/Roles/Jobs/Security/security_cadet.yml
@@ -18,6 +18,7 @@
   - Security
   - Brig
   - Maintenance
+  - Cryogenics
   special:
   - !type:AddImplantSpecial
     implants: [ MindShieldImplant ]
