--- a/Resources/Prototypes/Entities/Stations/base.yml
+++ b/Resources/Prototypes/Entities/Stations/base.yml
@@ -56,6 +56,12 @@
   components:
     - type: StationCentcomm
       map: "/Maps/corvax_centcomm.yml" # Corvax-Mapping
+      # Alteros-start
+      shuttleWhitelist:
+        components:
+        - ErtShuttle
+        - EvacShuttle
+      # Alteros-end
 
 - type: entity
   id: BaseStationEvacuation
